# Intuitionsemulator

./: README.md  SETUP.md  policy.yaml.example  pyproject.toml  report.md  run_all.py
.github/workflows/: ci.yml
hermes_plugin/joni-governor/: __init__.py  plugin.yaml
intuition_emulator/config/: params_default.yaml  verifier_rules.yaml
intuition_emulator/core/: claim.py  dynamics.py  system.py  verifier.py
intuition_emulator/evaluation/: go_no_go.py  mechanism_comparison.py  metrics.py  problem_class_analysis.py
intuition_emulator/experiments/: experiment_a.py  experiment_b.py  experiment_c.py  experiment_d.py  negative_scenario.py  stability_check.py
joni_governor/: __init__.py  audit.py  cli.py  gate.py  policy.py  staging.py  state.py
kontext/: 2026-07-08_fable5_nachtrag_hermine.md  2026-07-08_fable5_uebergabe.md  2026-07-09_fable5_mandat.md  2026-07-10_opus48_uebergabe.md  README.md
tests/: conftest.py  test_governor.py
